--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "d3-fetch": "^1.1.2",
     "domready": "^1.0.8"
   },
   "scripts": {
